--- a/ui/src/main/resources/application.properties
+++ b/ui/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8081
+
+threesixty.application.title=Komparator
+threesixty.application.logo=<span class="v-icon v-icon-rocket" style="font-family: Vaadin-Icons;">&#xe6c8;</span>
