Make the user interface functional, at least for the demo.

--- a/ui/src/main/resources/application.properties
+++ b/ui/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8082
 
-threesixty.application.title=Komparator
-threesixty.application.logo=<span class="v-icon v-icon-rocket" style="font-family: Vaadin-Icons;">&#xe6c8;</span>
+threesixty.application.title=Compare
+threesixty.application.logo=<span class="v-icon v-icon-compile" style="font-family: Vaadin-Icons;">&#xe915;</span>
