--- a/filesystem/pom.xml
+++ b/filesystem/pom.xml
@@ -5,11 +5,13 @@
     <parent>
         <artifactId>parent-pom</artifactId>
         <groupId>io.threesixty.kt</groupId>
-        <version>0.1.0</version>
+        <version>0.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>kt-filesystem</artifactId>
+    <artifactId>filesystem</artifactId>
+
+    <name>Comparator Filesystem</name>
 
     <properties>
         <project.build.target>1.8</project.build.target>
