--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,15 @@
 
     <groupId>io.threesixty.kt</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <packaging>pom</packaging>
 
     <properties>
+        <commons.text.version>1.1</commons.text.version>
         <concordion.version>2.1.0</concordion.version>
         <cucumber.version>1.2.5</cucumber.version>
 
+        <flatpack.version>4.0.1</flatpack.version>
 
         <java.version>1.8</java.version>
         <jbehave.version>4.1</jbehave.version>
@@ -100,6 +102,16 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commons.text.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.flatpack</groupId>
+                <artifactId>flatpack</artifactId>
+                <version>${flatpack.version}</version>
             </dependency>
             <!--
             <dependency>
