--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -4,15 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>ui</artifactId>
-	<version>0.1.0</version>
 
-	<name>Komparator UI</name>
-	<description>Katie User Interface Example</description>
+	<name>Comparator UI</name>
+	<description>Comparator User Interface</description>
 
 	<parent>
 		<groupId>io.threesixty.kt</groupId>
 		<artifactId>parent-pom</artifactId>
-		<version>0.1.0</version>
+		<version>0.1.1</version>
 	</parent>
 
 	<properties>
@@ -39,8 +38,8 @@
 	<dependencies>
         <dependency>
             <groupId>io.threesixty.kt</groupId>
-            <artifactId>kt-core</artifactId>
-            <version>0.1.0</version>
+            <artifactId>core</artifactId>
+            <version>0.1.1</version>
         </dependency>
         <!--		
         <dependency>
