--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <project.build.target>1.8</project.build.target>
         <project.build.source>1.8</project.build.source>
 
+        <sfm.version>3.12.2</sfm.version>
         <spring.version>4.3.6.RELEASE</spring.version>
         <spring-boot.version>1.5.2.RELEASE</spring-boot.version>
         <spring-security.version>4.1.3.RELEASE</spring-security.version>
@@ -107,6 +108,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-text</artifactId>
                 <version>${commons.text.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.simpleflatmapper</groupId>
+                <artifactId>sfm-csv</artifactId>
+                <version>${sfm.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.flatpack</groupId>
