Added Microsoft Excel comparisons

--- a/pom.xml
+++ b/pom.xml
@@ -288,6 +288,7 @@
     <modules>
         <module>core</module>
         <module>ui</module>
+        <module>excel</module>
         <!--
         <module>kt-integration-camel</module>
 
