--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>core</artifactId>
             <version>0.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.threesixty.kt</groupId>
+            <artifactId>excel</artifactId>
+            <version>0.1.1</version>
+        </dependency>
         <!--		
         <dependency>
 			<groupId>org.flowable</groupId>
