--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>excel</artifactId>
+    <artifactId>metamodel</artifactId>
+
 
     <dependencies>
         <dependency>
@@ -18,17 +19,11 @@
             <version>0.1.1</version>
         </dependency>
         <dependency>
-            <groupId>com.codoid.products</groupId>
-            <artifactId>fillo</artifactId>
-            <version>1.15</version>
+            <groupId>org.apache.metamodel</groupId>
+            <artifactId>MetaModel-csv</artifactId>
+            <version>5.0-RC3</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>jexcelapi</groupId>-->
-        <!--<artifactId>jxl</artifactId>-->
-        <!--<version>2.4.2</version>-->
-        <!--<scope>provided</scope>-->
-        <!--<optional>true</optional>-->
-        <!--</dependency>-->
+
         <!--********************************************************************************************************
         * Test : Testing
         *********************************************************************************************************-->
