--- a/pom.xml
+++ b/pom.xml
@@ -30,15 +30,22 @@
         <project.build.target>1.8</project.build.target>
         <project.build.source>1.8</project.build.source>
 
-        <sfm.version>3.12.2</sfm.version>
-        <spring.version>4.3.6.RELEASE</spring.version>
-        <spring-boot.version>1.5.2.RELEASE</spring-boot.version>
+        <sfm.version>3.16.0</sfm.version>
+        <spring.version>5.0.4.RELEASE</spring.version>
+        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
         <spring-security.version>4.1.3.RELEASE</spring-security.version>
         <slf4j.version>1.7.10</slf4j.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.spring.platform</groupId>
+                <artifactId>platform-bom</artifactId>
+                <version>Cairo-RC1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-beans</artifactId>
@@ -49,11 +56,13 @@
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <!--
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
@@ -119,30 +128,6 @@
                 <artifactId>flatpack</artifactId>
                 <version>${flatpack.version}</version>
             </dependency>
-            <!--
-            <dependency>
-                <groupId>com.vaadin</groupId>
-                <artifactId>vaadin-bom</artifactId>
-                <version>${vaadin.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.vaadin.addon</groupId>
-                <artifactId>vaadin-touchkit-agpl</artifactId>
-                <version>${vaadin-touchkit.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.vaadin</groupId>
-                <artifactId>vaadin-spring</artifactId>
-                <version>${vaadin-spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.vaadin</groupId>
-                <artifactId>vaadin-spring-boot</artifactId>
-                <version>${vaadin-spring.version}</version>
-            </dependency>
-            -->
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
@@ -285,10 +270,22 @@
         </pluginManagement>
     </build>
 
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <modules>
         <module>core</module>
         <module>ui</module>
         <module>excel</module>
+        <module>metamodel</module>
         <!--
         <module>kt-integration-camel</module>
 
